update dash app

--- a/dashapp/assets/style.css
+++ b/dashapp/assets/style.css
@@ -3,9 +3,16 @@
     flex-wrap: wrap;
 }
 
-.timeseries-chart {
-    width: 500px;
-    height: 200px;
+.timeseries-metrics-box {
     margin-left: auto;
     margin-right: auto;
+}
+
+.timeseries-metrics-data {
+    display: flex;
+}
+
+.timeseries-chart {
+    width: 600px;
+    height: 300px;
 }
