--- a/dashapp/assets/layout.css
+++ b/dashapp/assets/layout.css
@@ -39,3 +39,14 @@
     display: flex;
     align-items: center;
 }
+
+.scenario-selection {
+    margin-bottom: 3px;
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+}
+
+.scenario-selection p {
+    margin: 5px !important;
+}
